# QuSpin-C-API

./: .coveragerc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  generate_abi.py  meson.build  pyproject.toml  setup.py  test_bits.py
.github/workflows/: backend_test.yml  build.yml  ci.yml  codecov.yml  coverage.yml  cpp_api_ci.yml  cpp_api_test.yml  cpp_codecov.yml  cython_api_ci.yml
src/basis/: basis.h  fullspace.h  reference.h  symmetry.h
src/basis/bitbasis/: benes.h  benes_perm.h  bitbasis.h  bits.h  bits_info.h  dit_perms.h  info.h  int_types.h  permutations.h  types.h
src/bitbasis/: benes.h  bitbasis.h  bitperms.h  ditperms.h  types.h  utils.h
src/impl/: space  space.cxx
src/includes/: abi_basis.h  abi_operator.h  operater.h  types.h
src/includes/basis/: basis.h  space.h  symmetry.h
src/includes/basis/bitbasis/: bits.h  dits.h  info.h  types.h
src/includes/matrix/: generate.h  operater.h
src/includes/quspin_backend/: operater.h  types.h
src/includes/quspin_backend/basis/: basis.h  space.h  symmetry.h
src/includes/quspin_backend/utils/: functions.h
src/includes/templates/: quspin.h  types.h
src/includes/templates/basis/: basis.h  space.h  symmetry.h
src/includes/templates/utils/: functions.h
src/includes/utils/: functions.h
src/matrix/: generate.h  operater.h
src/python_impl/basis/bitset/: types.py
src/quspin_api/: basis.cpp  basis.pxd  basis.pyx  operator.pxd  operator.pyx
src/quspin_core/: __init__.py  _bindings.cpp  _symmetry_utils.py  _utils.py  _utils.pyx  _version.cpp  basis.cpp  basis.pyx  operator.cpp  operator.pxd  operator.pyx  symmetry.pyx
src/quspin_core/_submodules/: array.cpp  array.h  version.cpp  version.h
src/quspin_core/includes/: abi_basis.h  basis.pxd  operator.pxd  quspin_core_abi.pxd
src/quspin_cpp_api/: operater.h  types.h
src/quspin_cpp_api/basis/: basis.h  space.h  symmetry.h
test/: test_array.py
test/test_backend/: test.cxx
test/test_cpp/: CMakeLists.txt  test.cpp
test/test_python/: test_basis.py  test_operator.py
test_cpp/: test.cpp
test_python/: test_basis.py  test_operator.py  test_symmetry.py  test_utils.py
(+37 files in other folders)
